# gillmax

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  paper.qmd  pyproject.toml  references.bib  zz_todo.md
_extensions/numbats/wp/: _extension.yml
gillespymax/: __init__.py  alternative_algorithms.py  analysis.py  config_loader.py  events.py  history.py  ratedict.py  sim.py
vignette/: config.yaml  contagion.py  create_network.py  run_sim.py
