[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gillespymax"
authors = [{name = "David Wu", email = "david.wu1@monash.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "networkx",
    "sortedcontainers",
    "h5py"
]

[project.urls]
Home = "https://github.com/dwu0042/gillmax"

[tool.flit.sdist]
include = ["gillespymax/", "vignette/"]
exclude = ["_extensions/", "_quarto.yml", "paper.qmd", "references.bib"]